k8s/1_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkout
---
apiVersion: v1
kind: Namespace
metadata:
  name: common
---
apiVersion: v1
kind: Namespace
metadata:
  name: external
---
apiVersion: v1
kind: Namespace
metadata:
  name: identity
---
apiVersion: v1
kind: Namespace
metadata:
  name: products
---
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
