k8s/emailsender-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emailsender
  namespace: common
  labels:
    app: emailsender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailsender
  template:
    metadata:
      labels:
        app: emailsender
    spec:
      containers:
      - env:
        - name: ConnectionStrings__DefaultConnection
          value: Server=;Database=Identity;User Id=;Password=;ConnectRetryCount=0
        - name: Dependencies__Orders
          value: http://orders.checkout
        - name: Emails__Smtp__Host
          value: smtp
        - name: Identity__Authority
          value: http://identityapi.identity
        - name: RabbitMq__Host
          value: rabbitmq
        image: mwpro/pjmicrostore-common-emailsender
        name: emailsender
