k8s/frontapigateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontapigateway
  namespace: external
  labels:
    app: frontapigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontapigateway
  template:
    metadata:
      labels:
        app: frontapigateway
    spec:
      containers:
      - env:
        - name: GatewayServices__Cart__DownstreamHost
          value: cart
        - name: GatewayServices__Cart__DownstreamPort
          value: "80"
        - name: GatewayServices__Identity__DownstreamHost
          value: identityapi
        - name: GatewayServices__Identity__DownstreamPort
          value: "80"
        - name: GatewayServices__Orders__DownstreamHost
          value: orders
        - name: GatewayServices__Orders__DownstreamPort
          value: "80"
        - name: GatewayServices__Payments__DownstreamHost
          value: payments
        - name: GatewayServices__Payments__DownstreamPort
          value: "80"
        - name: GatewayServices__Photos__DownstreamHost
          value: photos
        - name: GatewayServices__Photos__DownstreamPort
          value: "80"
        - name: GatewayServices__Products__DownstreamHost
          value: catalog
        - name: GatewayServices__Products__DownstreamPort
          value: "80"
        - name: GatewayServices__Search__DownstreamHost
          value: search
        - name: GatewayServices__Search__DownstreamPort
          value: "80"
        - name: GatewayServices__Shipping__DownstreamHost
          value: shipping
        - name: GatewayServices__Shipping__DownstreamPort
          value: "80"
        image: mwpro/pjmicrostore-frontapigateway
        name: frontapigateway
        ports:
        - containerPort: 80
