k8s/frontstore-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: frontstore
  name: frontstore
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: frontstore
    spec:
      containers:
      - env:
        - name: API_URL
          value: http://localhost:9090
        - name: APP_URL
          value: http://localhost:8080
        - name: AUTH_URL
          value: http://localhost:5000
        image: mwpro/pjmicrostore-front-store
        name: frontstore
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
