k8s/orders-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders
  namespace: checkout
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - env:
        - name: ConnectionStrings__DefaultConnection
          value: Server=;Database=Checkout.Orders;User Id=;Password=;ConnectRetryCount=0
        - name: Dependencies__Cart
          value: http://cart.checkout
        - name: Dependencies__Payment
          value: http://payments.checkout
        - name: Dependencies__Shipping
          value: http://shipping.checkout
        - name: Identity__Authority
          value: http://identityapi.identity
        - name: RabbitMq__Host
          value: rabbitmq
        image: mwpro/pjmicrostore-checkout-orders
        name: orders
        ports:
        - containerPort: 80
