k8s/payments-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payments
  namespace: checkout
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - env:
        - name: ConnectionStrings__DefaultConnection
          value: Server=sqlserver.infrastructure;Database=Checkout.Payments;User Id=sa;Password=sqlDevPassw0rd;ConnectRetryCount=0
        - name: Identity__Authority
          value: http://identityapi.identity
        - name: RabbitMq__Host
          value: rabbitmq.infrastructure
        image: mwpro/pjmicrostore-checkout-payments
        name: payments
        ports:
        - containerPort: 80
