k8s/photos-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: photos
  namespace: products
  labels:
    app: photos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos
  template:
    metadata:
      labels:
        app: photos
    spec:
      containers:
      - env:
        - name: ConnectionStrings__DefaultConnection
          value: Server=sqlserver.infrastructure;Database=Products.Photos;User Id=sa;Password=sqlDevPassw0rd;ConnectRetryCount=0
        - name: Identity__Authority
          value: http://identityapi.identity
        - name: RabbitMq__Host
          value: rabbitmq.infrastructure
        image: mwpro/pjmicrostore-products-photos:1.0.0
        name: photos
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
