k8s/shipping-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shipping
  namespace: checkout
  labels:
    app: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - env:
        - name: Identity__Authority
          value: http://identityapi.identity
        - name: RabbitMq__Host
          value: rabbitmq.infrastructure
        image: mwpro/pjmicrostore-checkout-shipping:1.0.0
        name: shipping
        ports:
        - containerPort: 80
