k8s/adminapigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: adminapigateway
  name: adminapigateway
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 80
  selector:
    io.kompose.service: adminapigateway
status:
  loadBalancer: {}
