k8s/adminfront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminfront
  namespace: external
spec:
  selector:
    app: adminfront
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
