k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: checkout
spec:
  selector:
    app: cart
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
