k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: products
spec:
  selector:
    app: catalog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
