k8s/frontadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontadmin
  namespace: external
spec:
  selector:
    app: frontadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
