k8s/frontapigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: frontapigateway
  name: frontapigateway
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 80
  selector:
    io.kompose.service: frontapigateway
status:
  loadBalancer: {}
