k8s/frontstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontstore
  namespace: external
spec:
  selector:
    app: frontstore
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
