k8s/identityapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identityapi
  namespace: identity
spec:
  selector:
    app: identityapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
