k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: checkout
spec:
  selector:
    app: orders
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
