k8s/photos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photos
  namespace: products
spec:
  selector:
    app: photos
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
