k8s/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: products
spec:
  selector:
    app: search
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
