k8s/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: checkout
spec:
  selector:
    app: shipping
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
