k8s/smtp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp
  namespace: infrastructure
spec:
  selector:
    app: smtp
  ports:
  - protocol: TCP
    name: "smtp"
    port: 1025
    targetPort: 1025
  - protocol: TCP
    name: "ui"
    port: 8025
    targetPort: 8025
