k8s/storeapigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storeapigateway
  namespace: external
spec:
  selector:
    app: storeapigateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
