k8s/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
  namespace: external
spec:
  selector:
    app: storefront
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
