k8s/store-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: store
  namespace: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: store.pjmicrostore.local
    http:
      paths:
      - path: /api
        backend:
         serviceName: storeapigateway
         servicePort: 80
      - path: /
        backend:
          serviceName: storefront
          servicePort: 80
